--- a/public/static/home/css/global.css
+++ b/public/static/home/css/global.css
@@ -613,9 +613,9 @@ body .fly-user-main{position: relative; min-height: 600px;}
 /* 排序选项 */
 .fly-filter {position:relative;float: left; width: 100%;height: 50px;}
 .fly-filter .order-tab {position:relative; float: left; width: 440px;}
-.fly-filter .filter-tab{position:relative; float: right; width: 400px;height: 41px;}
-.fly-filter .filter-tab .layui-nav{ height: 41px; background-color:white!important;}
-.fly-filter .filter-tab .layui-nav { margin: 10px 0; }
+.fly-filter .filter-tab{position:relative; float: right; width: 311px;height: 41px;}
+.fly-filter .filter-tab a.reset{float: right;display: block; height: 38px; padding-top: 20px; width: 70px;}
+.fly-filter .filter-tab .layui-nav{float: left; height: 41px; margin: 10px 0; background-color:white!important;left: 0!important;padding: 0 5px;}
 .fly-filter .filter-tab .layui-nav .layui-nav-item {line-height: 41px; }
 .fly-filter .filter-tab .layui-nav .layui-nav-item span{ color:#6d6d6d; }
 .fly-filter .filter-tab .layui-nav .layui-nav-item a{ color:#6d6d6d;}
@@ -660,7 +660,11 @@ body .fly-user-main{position: relative; min-height: 600px;}
 .fly-case-img .tool{display: none; position: absolute; width: 100px; bottom: 30px;left: 41%;margin-left: -29px;text-align: center}
 .fly-case-img:hover .tool{display: inline-block;}
 .fly-case-img .tool .layui-btn{background-color: #009688;color: #fff;font-style:normal; border: none;white-space: nowrap;  border-radius: 2px;}
-.fly-case-img .tool .btn i{display: inline-block;width: 38px;font-size: 20px;text-align: center;    line-height: 38px;color: #fff;cursor: pointer;}
+.fly-case-img .tool .btn{margin-top: 10px;}
+.fly-case-img .tool .btn i{display: inline-block;width: 38px;
+  height: 38px; font-size: 20px;text-align: center; line-height: 38px;color: #fff;cursor: pointer;
+  background: rgba(0, 0, 0, .35);border-radius: 50%; margin-right: 10px;
+}
 .fly-case-img .tool .btn i:hover{color: #ff8a00;}
 .fly-case-img .tool .btn .icon-star{font-size: 24px!important;}
 
@@ -717,6 +721,7 @@ body .fly-user-main{position: relative; min-height: 600px;}
 
   /* 分页 */
   .laypage-main a, .laypage-main span{display: none;}
+  .laypage-main .laypage-first,
   .laypage-main .laypage-prev,
   .laypage-main .laypage-curr,
   .laypage-main .laypage-next{display: inline-block;}
